tests-system/rbt-conditional-expression-types/output
(if x then x elsif y > x then y else y) <= x, "potato type"
    ^ rbt-conditional-expression-types/foo.rsl:10: error: expected expression of type Builtin_Boolean, got Builtin_Integer instead
Processed 1 model(s), 0 check(s) and 1 requirement file(s) and found 1 error(s)
